@@ -166,7 +166,8 @@ int main( const int argc, char** argv )
      }
   }
 
-  LOG_INFO( "lockfile " << lockfile );
+  LOG_INFO( "lockfile " << lockfile << ". ");
+  LOG_INFO( "(Remove if mrViewer does not start)" );
 
 
   if ( fs::exists( lockfile ) && single_instance )
@@ -251,7 +252,8 @@ int main( const int argc, char** argv )
 				 data ) );
   }
 
-  fltk::add_timeout( 0.5, load_new_files, ui );
+  if ( single_instance )
+      fltk::add_timeout( 0.5, load_new_files, ui );
 
 
   int ok;
