@@ -1148,15 +1148,14 @@ void GLEngine::draw_images( ImageList& images )
 
   for ( i = images.begin() ; i != e; ++i, ++q )
     {
-        texWidth = texHeight = 0;
 
       const Image_ptr& img = *i;
       mrv::image_type_ptr pic = img->hires();
 
-      boost::int64_t frame = pic->frame();
+      const boost::int64_t& frame = pic->frame();
 
-      mrv::Recti dpw = img->display_window(frame);
-      mrv::Recti daw = img->data_window(frame);
+      mrv::Recti& dpw = img->display_window(frame);
+      mrv::Recti& daw = img->data_window(frame);
 
       if ( img->stereo_type() == CMedia::kStereoCrossed )
       {
@@ -1296,8 +1295,8 @@ void GLEngine::draw_images( ImageList& images )
 
          glTranslated( dpw.w(), 0, 0 );
 
-         mrv::Recti dpw2 = img->display_window2(frame);
-         mrv::Recti daw2 = img->data_window2(frame);
+         mrv::Recti& dpw2 = img->display_window2(frame);
+         mrv::Recti& daw2 = img->data_window2(frame);
          if ( img->stereo_type() == CMedia::kStereoCrossed )
          {
              dpw2 = img->display_window(frame);
